include/StTrgApi.h

//-----------------------------------------------------------------------------
//Defect Pixel Correction
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_GetEnableDefectPixelCorrectionCount(HANDLE hCamera, PWORD pwCount);
BOOL WINAPI StTrg_GetDefectPixelCorrectionMode(HANDLE hCamera, PWORD pwMode);
BOOL WINAPI StTrg_SetDefectPixelCorrectionMode(HANDLE hCamera, WORD wMode);
BOOL WINAPI StTrg_GetDefectPixelCorrectionPosition(HANDLE hCamera, WORD wIndex, PDWORD pdwX, PDWORD pdwY);
BOOL WINAPI StTrg_SetDefectPixelCorrectionPosition(HANDLE hCamera, WORD wIndex, DWORD dwX, DWORD dwY);
BOOL WINAPI StTrg_DetectDefectPixel(HANDLE hCamera, DWORD dwWidth, DWORD dwHeight, PBYTE pbyteRaw, WORD wThreashold);
//-----------------------------------------------------------------------------
//Preview
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_Draw(HANDLE hCamera, HDC hDC, int DestOffsetX, int DestOffsetY, DWORD dwDestWidth, DWORD dwDestHeight, int SrcOffsetX, int SrcOffsetY, DWORD dwSrcWidth, DWORD dwSrcHeight, DWORD dwOrgWidth, DWORD dwOrgHeight, PBYTE pbyteGrayOrBGR, DWORD dwPixelFormat);
//-----------------------------------------------------------------------------
//For Specific Camera
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_GetIOARegister(HANDLE hCamera, DWORD dwStartAdd, DWORD dwEndAdd, PWORD pwValue);
BOOL WINAPI StTrg_SetIOARegister(HANDLE hCamera, DWORD dwStartAdd, DWORD dwEndAdd, PWORD pwValue);
BOOL WINAPI StTrg_GetITARegister(HANDLE hCamera, DWORD dwStartAdd, DWORD dwEndAdd, PWORD pwValue);
BOOL WINAPI StTrg_SetITARegister(HANDLE hCamera, DWORD dwStartAdd, DWORD dwEndAdd, PWORD pwValue);
BOOL WINAPI StTrg_GetJBARegister(HANDLE hCamera, DWORD dwStartAdd, DWORD dwEndAdd, PWORD pwValue);
BOOL WINAPI StTrg_SetJBARegister(HANDLE hCamera, DWORD dwStartAdd, DWORD dwEndAdd, PWORD pwValue);