include/StTrgAPI.Bas


'------------------------------------------------------------------------------
'Defect Pixel Correction
'------------------------------------------------------------------------------
Public Declare Function StTrg_GetEnableDefectPixelCorrectionCount Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pwCount As Integer) As Long
Public Declare Function StTrg_GetDefectPixelCorrectionMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByRef pwMode As Integer) As Long
Public Declare Function StTrg_SetDefectPixelCorrectionMode Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal wMode As Integer) As Long
Public Declare Function StTrg_GetDefectPixelCorrectionPosition Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal wIndex As Integer, ByRef pdwX As Long, ByRef pdwY As Long) As Long
Public Declare Function StTrg_SetDefectPixelCorrectionPosition Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal wIndex As Integer, ByVal dwX As Long, ByVal dwY As Long) As Long
Public Declare Function StTrg_DetectDefectPixel Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwWidth As Long, ByVal dwHeight As Long,  pbyteRaw As Byte, ByVal wThreashold As Integer) As Long

'------------------------------------------------------------------------------
'Preview
'------------------------------------------------------------------------------
Public Declare Function StTrg_Draw Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal hDC As Long, ByVal DestOffsetX As Long, ByVal DestOffsetY As Long, ByVal dwDestWidth As Long, ByVal dwDestHeight As Long, ByVal SrcOffsetX As Long, ByVal SrcOffsetY As Long, ByVal dwSrcWidth As Long, ByVal dwSrcHeight As Long, ByVal dwOrgWidth As Long, ByVal dwOrgHeight As Long,  pbyteGrayOrBGR As Byte, ByVal dwPixelFormat As Long) As Long

'------------------------------------------------------------------------------
'For Specific Camera
'------------------------------------------------------------------------------
Public Declare Function StTrg_GetIOARegister Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwStartAdd As Long, ByVal dwEndAdd As Long,  pwValue As Integer) As Long
Public Declare Function StTrg_SetIOARegister Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwStartAdd As Long, ByVal dwEndAdd As Long,  pwValue As Integer) As Long
Public Declare Function StTrg_GetITARegister Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwStartAdd As Long, ByVal dwEndAdd As Long,  pwValue As Integer) As Long
Public Declare Function StTrg_SetITARegister Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwStartAdd As Long, ByVal dwEndAdd As Long,  pwValue As Integer) As Long
Public Declare Function StTrg_GetJBARegister Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwStartAdd As Long, ByVal dwEndAdd As Long,  pwValue As Integer) As Long
Public Declare Function StTrg_SetJBARegister Lib "StTrgAPI.dll" (ByVal hCamera As Long, ByVal dwStartAdd As Long, ByVal dwEndAdd As Long,  pwValue As Integer) As Long
